分割予想数が出なくなっていた問題の修正

--- a/HmSplitTextFileBySize.ui.html
+++ b/HmSplitTextFileBySize.ui.html
@@ -28,6 +28,9 @@
     idCallback = Number(strIDCallBack);
 
     let nAllByteSize = 1;
+    let strAllByteSize = params.get('strAllByteSize');
+    nAllByteSize = Number(strAllByteSize);
+
     let nDivFileCount = 1;
 
     window.onload = () => { input_1.focus(); }
